update post: Introduction to Machine Learning

--- a/clc76nhc5000908mne06f78f7.md
+++ b/clc76nhc5000908mne06f78f7.md
@@ -1,5 +1,23 @@
 # Introduction to Machine Learning
 
-Machine Learning was introduced in the year 1959 by [**Arthur Samuel**](https://en.wikipedia.org/wiki/Arthur_Samuel_(computer_scientist)). [**Checker's game**](http://www.incompleteideas.net/book/ebook/node109.html) was the world's first computer-based self-learning program which he had written in the IBM 701.
+Hello everyone. I am a Machine learning enthusiast like you. The intersenting fact about the Machine Learning field is building a system which can operate on its own.
 
-Machine learning is the sub-branch of artificial intelligence. The definition of machine learning is the ability of the computer to imitate human behaviour. It can be understandable by a small real-time example. A 1-year-old baby doesn't know how to talk but by seeing their parents and everyone around them they will be able to speak. First, they used to speak simple words like Amma, Appa etc..then slowly other words too. After that, they used to learn how to reply to specific questions. Here the training dataset is the words that we speak near the child. The child's brain is used to train with the given dataset and slowly they will be speaking.
+### History
+
+ML was introduced in the year 1959 by [**Arthur Samuel**](https://en.wikipedia.org/wiki/Arthur_Samuel_(computer_scientist)). [**Checker's game**](http://www.incompleteideas.net/book/ebook/node109.html) was the world's first computer-based self-learning program which he had written in the IBM 701. Later on, it is transformed into topics like DeepLearning.
+
+### About
+
+Machine learning is the sub-branch of artificial intelligence. The definition of machine learning is the ability of the computer to imitate human behaviour. Machine learning had transformed from many phases to the existing one.
+
+### Example
+
+1. Non- Technical Example:
+    
+    Machine learning can be understandable by a small real-time example it is not a big deal. A 1-year-old baby doesn't know how to talk but by seeing their parents and everyone around them they will be able to speak. First, they used to speak simple words like Amma, Appa etc..then slowly other words too. After that, they used to learn how to reply to specific questions. Here the training dataset is the words that we speak near the child. The child's brain is used to train with the given dataset and slowly they will be speaking.
+    
+2. Technical example:
+    
+    Sales prediction, Self-driving cars like [Tesla](http://tesla.com/about), etc
+    
+    Note: In the upcoming blogs I am going to explain about the sales-specific scenario.
