update post: Introduction to Machine Learning

--- a/clc76nhc5000908mne06f78f7.md
+++ b/clc76nhc5000908mne06f78f7.md
@@ -1,6 +1,6 @@
 # Introduction to Machine Learning
 
-Hello everyone. I am a Machine learning enthusiast like you. The intersenting fact about the Machine Learning field is building a system which can operate on its own.
+Hello everyone. I am a Machine learning enthusiast. I am going to write a series in the machine learning. The interesting fact about the Machine Learning field is building a system which can operate on its own.
 
 ### History
 
@@ -12,7 +12,7 @@ Machine learning is the sub-branch of artificial intelligence. The definition of
 
 ### Example
 
-1. Non- Technical Example:
+1. Non-Technical Example:
     
     Machine learning can be understandable by a small real-time example it is not a big deal. A 1-year-old baby doesn't know how to talk but by seeing their parents and everyone around them they will be able to speak. First, they used to speak simple words like Amma, Appa etc..then slowly other words too. After that, they used to learn how to reply to specific questions. Here the training dataset is the words that we speak near the child. The child's brain is used to train with the given dataset and slowly they will be speaking.
     
@@ -20,4 +20,4 @@ Machine learning is the sub-branch of artificial intelligence. The definition of
     
     Sales prediction, Self-driving cars like [Tesla](http://tesla.com/about), etc
     
-    Note: In the upcoming blogs I am going to explain about the sales-specific scenario.
+    Note: In the upcoming blogs I am going to explain the sales-specific scenario.
