update post: Introduction to Machine Learning

--- a/clc76nhc5000908mne06f78f7.md
+++ b/clc76nhc5000908mne06f78f7.md
@@ -1,6 +1,10 @@
 # Introduction to Machine Learning
 
-Hello everyone. I am a Machine learning enthusiast. I am going to write a series in the machine learning. The interesting fact about the Machine Learning field is building a system which can operate on its own.
+Hello. I am a Machine learning enthusiast and upcoming machine learning \_\_\_\_\_\_\_. I am going to write a series about machine learning. This series is a documentation of my learning. You will find these articles for making changes in my [GitHub repo](https://github.com/NShravanReddy/Heymachinelearning).
+
+Before going to the main topic of the article follow the people you like or popular ones in the field of machine learning. I used to follow [**Sebastian Raschka**](https://twitter.com/rasbt) **and** [**Akshay**](https://twitter.com/akshay_pachaar) **on Twitter.** You will be amazed by interesting tweets and their views on current trends.
+
+The interesting fact about the Machine Learning field is building a system that can operate on its own. Let us start with the history of machine learning along with about and resources to follow.
 
 ### History
 
@@ -12,12 +16,18 @@ Machine learning is the sub-branch of artificial intelligence. The definition of
 
 ### Example
 
-1. Non-Technical Example:
-    
-    Machine learning can be understandable by a small real-time example it is not a big deal. A 1-year-old baby doesn't know how to talk but by seeing their parents and everyone around them they will be able to speak. First, they used to speak simple words like Amma, Appa etc..then slowly other words too. After that, they used to learn how to reply to specific questions. Here the training dataset is the words that we speak near the child. The child's brain is used to train with the given dataset and slowly they will be speaking.
-    
-2. Technical example:
-    
-    Sales prediction, Self-driving cars like [Tesla](http://tesla.com/about), etc
-    
-    Note: In the upcoming blogs I am going to explain the sales-specific scenario.
+Non-Technical Example:
+
+Machine learning can be understandable by a small real-time example it is not a big deal. A 1-year-old baby doesn't know how to talk but by seeing their parents and everyone around them they will be able to speak. First, they used to speak simple words like Amma, Appa etc..then slowly other words too. After that, they used to learn how to reply to specific questions. Here the training dataset is the words that we speak near the child. The child's brain is used to train with the given dataset and slowly they will be speaking.
+
+Technical example:
+
+Sales prediction, Self-driving cars like [Tesla](http://tesla.com/about), etc
+
+Note: In the upcoming blogs will be explaining more real-world examples.
+
+## Resources to follow
+
+1\. [Deep Learning courses](https://www.deeplearning.ai/courses/)
+
+will be updating the articles frequently. Feel free to Like, share and comment with your thoughts.
