update post: Introduction to Machine Learning

--- a/clc76nhc5000908mne06f78f7.md
+++ b/clc76nhc5000908mne06f78f7.md
@@ -1,6 +1,15 @@
-# Introduction to Machine Learning
+---
+title: "Introduction to Machine Learning"
+seoTitle: "Heymachinelearning"
+datePublished: Wed Dec 28 2022 04:54:30 GMT+0000 (Coordinated Universal Time)
+cuid: clc76nhc5000908mne06f78f7
+slug: introduction-to-machine-learning
+cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/2e45de0b4cc59025c21891677b2f4e3b.jpeg
+tags: machine-learning, wemakedevs, heymachinelearning
 
-Hello. I am a Machine learning enthusiast and upcoming machine learning \_\_\_\_\_\_\_. I am going to write a series about machine learning. This series is a documentation of my learning. You will find these articles for making changes in my [GitHub repo](https://github.com/NShravanReddy/Heymachinelearning).
+---
+
+Hello. I am a Machine learning enthusiast. I am going to write a series about machine learning. This series is a documentation of my learning. You will find these articles for making changes in my [GitHub repo](https://github.com/NShravanReddy/Heymachinelearning).
 
 Before going to the main topic of the article follow the people you like or popular ones in the field of machine learning. I used to follow [**Sebastian Raschka**](https://twitter.com/rasbt) **and** [**Akshay**](https://twitter.com/akshay_pachaar) **on Twitter.** You will be amazed by interesting tweets and their views on current trends.
 
