update post: Introduction to Machine Learning

--- a/clc76nhc5000908mne06f78f7.md
+++ b/clc76nhc5000908mne06f78f7.md
@@ -39,4 +39,6 @@ Note: In the upcoming blogs will be explaining more real-world examples.
 
 1\. [Deep Learning courses](https://www.deeplearning.ai/courses/)
 
+2\. [Practical Deep Learning](https://course.fast.ai/) by fast.ai
+
 will be updating the articles frequently. Feel free to Like, share and comment with your thoughts.
